<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.detail.DetailFragment">

    <ImageView
        android:id="@+id/iv_movie_poster"
        android:layout_marginTop="@dimen/margin_home"
        android:layout_marginStart="@dimen/margin_home"
        android:layout_width="128dp"
        android:layout_height="192dp"
        android:adjustViewBounds="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/ic_app_main"
        android:scaleType="centerCrop" />

    <TextView
        android:id="@+id/tv_tagline"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/iv_movie_poster"
        app:layout_constraintStart_toEndOf="@id/iv_movie_poster"
        android:layout_marginStart="@dimen/margin_home"
        app:layout_constraintWidth_percent="0.5"
        android:textColor="@color/gray"
        android:text="@string/tagline_placeholder"

        />

    <TextView
        android:id="@+id/tv_movie_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:maxHeight="144dp"
        app:layout_constraintWidth_percent="0.5"
        android:text="@string/title_placeholder"
        app:layout_constraintBottom_toTopOf="@id/tv_tagline"
        app:layout_constraintStart_toEndOf="@id/iv_movie_poster"
        android:layout_marginStart="@dimen/margin_home"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginBottom="@dimen/margin_item" />

    <TextView
        android:id="@+id/tv_genre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btn_favorite"
        android:layout_marginTop="@dimen/margin_item"
        android:layout_marginHorizontal="@dimen/margin_home"
        android:text="genre 1, genre 2"
        android:textColor="@color/dark_gray" />

    <ImageView
        android:id="@+id/iv_ic_release"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:src="@drawable/ic_release"
        app:tint="@color/dark_gray"
        app:layout_constraintTop_toBottomOf="@id/iv_movie_poster"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/margin_item"
        android:layout_marginStart="@dimen/margin_home" />

    <TextView
        android:id="@+id/tv_movie_release_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/iv_ic_release"
        app:layout_constraintStart_toEndOf="@id/iv_ic_release"
        android:layout_marginStart="@dimen/margin_small_icon"
        android:text="@string/release_date_placeholder"
        android:fontFamily="monospace"
        android:textColor="@color/dark_gray" />

    <ImageView
        android:id="@+id/iv_ic_rating"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:src="@drawable/ic_rating"
        app:tint="@color/gray"
        app:layout_constraintTop_toTopOf="@id/iv_ic_release"
        app:layout_constraintStart_toEndOf="@id/tv_movie_release_date"
        android:layout_marginStart="@dimen/margin_item" />

    <TextView
        android:id="@+id/tv_vote_average"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/iv_ic_rating"
        app:layout_constraintStart_toEndOf="@id/iv_ic_rating"
        android:layout_marginStart="@dimen/margin_small_icon"
        android:text="@string/rating_placeholder"
        android:textColor="@color/gray" />

    <Button
        android:id="@+id/btn_favorite"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        app:layout_constraintStart_toEndOf="@id/tv_vote_average"
        app:layout_constraintTop_toTopOf="@id/tv_vote_average"
        app:layout_constraintBottom_toBottomOf="@id/tv_vote_average"
        android:text="add to Favorite"
        android:layout_marginStart="@dimen/margin_item"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tv_movie_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_home"
        app:layout_constraintTop_toBottomOf="@id/tv_genre"
        android:layout_marginTop="@dimen/margin_item"
        android:text="@string/description_placeholder"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:justificationMode="inter_word" />

    <TextView
        android:id="@+id/tv_production"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_home"
        app:layout_constraintTop_toBottomOf="@id/tv_movie_description"
        android:layout_marginTop="@dimen/margin_item"
        android:text="@string/production_placeholder"
        android:textColor="@color/gray" />

</androidx.constraintlayout.widget.ConstraintLayout>