<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/margin_item"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_item"
    android:layout_marginBottom="@dimen/margin_item">

    <ImageView
        android:contentDescription="@string/poster_image"
        android:id="@+id/iv_movie_poster"
        android:layout_width="64dp"
        android:layout_height="96dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:scaleType="centerCrop"
        android:layout_marginStart="@dimen/margin_item"
        android:layout_marginTop="@dimen/margin_item"
        android:src="@drawable/ic_app_main" />

    <TextView
        android:id="@+id/tv_movie_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/title_placeholder"
        app:layout_constraintStart_toEndOf="@id/iv_movie_poster"
        app:layout_constraintTop_toTopOf="@id/iv_movie_poster"
        android:layout_marginStart="@dimen/margin_item"
        app:layout_constraintWidth_percent="0.7"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:fontFamily="monospace"
        android:textSize="20sp"
        android:singleLine="true" />

    <ImageView
        android:id="@+id/iv_ic_release"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:src="@drawable/ic_release"
        app:tint="@color/dark_gray"
        app:layout_constraintStart_toEndOf="@id/iv_movie_poster"
        app:layout_constraintTop_toBottomOf="@id/tv_movie_title"
        android:layout_marginTop="@dimen/margin_item"
        android:layout_marginStart="@dimen/margin_item" />

    <TextView
        android:id="@+id/tv_movie_release_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.65"
        app:layout_constraintTop_toTopOf="@id/iv_ic_release"
        app:layout_constraintStart_toEndOf="@id/iv_ic_release"
        android:layout_marginStart="@dimen/margin_small_icon"
        android:text="@string/release_date_placeholder"
        android:fontFamily="monospace"
        android:textColor="@color/dark_gray" />

    <ImageView
        android:id="@+id/iv_ic_rating"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:src="@drawable/ic_rating"
        app:tint="@color/gray"
        app:layout_constraintTop_toBottomOf="@id/iv_ic_release"
        app:layout_constraintStart_toEndOf="@id/iv_movie_poster"
        android:layout_marginTop="@dimen/margin_item"
        android:layout_marginStart="@dimen/margin_item" />

    <TextView
        android:id="@+id/tv_vote_average"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.7"
        app:layout_constraintTop_toTopOf="@id/iv_ic_rating"
        app:layout_constraintStart_toEndOf="@id/iv_ic_rating"
        android:layout_marginStart="@dimen/margin_small_icon"
        android:text="@string/rating_placeholder"
        android:textColor="@color/gray" />

</androidx.constraintlayout.widget.ConstraintLayout>