<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/orange_main"
    tools:context=".ui.home.HomeFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_marginStart="@dimen/margin_home"
        android:layout_marginTop="@dimen/margin_home"
        android:id="@+id/tv_welcome_user"
        android:layout_width="0dp"
        android:layout_height="24dp"
        android:gravity="center_vertical"
        app:layout_constraintWidth_percent="0.5"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/white"
        android:text="@string/welcome_user_text"
        android:autoSizeTextType="uniform"
        app:autoSizeMaxTextSize="16sp"
        app:autoSizeMinTextSize="10sp" />

    <ImageView
        android:id="@+id/iv_profile"
        android:layout_marginTop="@dimen/margin_home"
        android:layout_marginEnd="@dimen/margin_home"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:contentDescription="@string/ic_profile_desc"
        android:src="@drawable/ic_profile"
        android:focusable="true"
        android:clickable="true"
        android:background="?android:attr/selectableItemBackground" />

    <ImageView
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:id="@+id/iv_favorite"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/iv_profile"
        android:layout_marginTop="@dimen/margin_home"
        android:layout_marginEnd="@dimen/margin_item"
        android:contentDescription="@string/icon_favorite"
        android:src="@drawable/ic_favorite"
        android:focusable="true"
        android:clickable="true"
        android:background="?android:attr/selectableItemBackground" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin_home"
        android:layout_marginHorizontal="@dimen/margin_home"
        android:id="@+id/rv_movie_list"
        app:layout_constraintTop_toBottomOf="@id/iv_profile"
        app:layout_constraintHeight_percent="0.9"
        tools:listitem="@layout/movie_item" />

</androidx.constraintlayout.widget.ConstraintLayout>