<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.register.RegisterFragment">

    <ImageView
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:id="@+id/iv_profile"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:src="@tools:sample/avatars"
        android:background="@drawable/bg_item"
        android:layout_marginTop="@dimen/margin_home" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="@dimen/margin_home"
        android:id="@+id/ly_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username_hint"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginStart="@dimen/margin_input_login"
        android:layout_marginEnd="@dimen/margin_input_login"
        app:layout_constraintTop_toBottomOf="@id/iv_profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:boxStrokeErrorColor="@color/red_error">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_username"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="@dimen/margin_home"
        android:id="@+id/ly_real_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/real_name_hint"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginStart="@dimen/margin_input_login"
        android:layout_marginEnd="@dimen/margin_input_login"
        app:layout_constraintTop_toBottomOf="@id/ly_username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:boxStrokeErrorColor="@color/red_error">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_real_name"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="@dimen/margin_home"
        android:id="@+id/ly_birthday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/birthday_hint"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginStart="@dimen/margin_input_login"
        android:layout_marginEnd="@dimen/margin_input_login"
        app:layout_constraintTop_toBottomOf="@id/ly_real_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:boxStrokeErrorColor="@color/red_error">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_birthday" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="@dimen/margin_home"
        android:id="@+id/ly_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/address_hint"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginStart="@dimen/margin_input_login"
        android:layout_marginEnd="@dimen/margin_input_login"
        app:layout_constraintTop_toBottomOf="@id/ly_birthday"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:boxStrokeErrorColor="@color/red_error">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_address"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ly_address"
        android:layout_marginHorizontal="@dimen/margin_input_login"
        android:layout_marginTop="@dimen/margin_home"
        android:text="@string/update_text"
        android:textSize="16sp"
        android:paddingVertical="12dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_logout"
        app:layout_constraintTop_toBottomOf="@id/btn_update"
        android:layout_marginHorizontal="@dimen/margin_input_login"
        android:text="Log out"
        android:textSize="16sp"
        android:paddingVertical="12dp" />

</androidx.constraintlayout.widget.ConstraintLayout>